ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
        - path: /front-end/*
          backend:
            serviceName: front-end
            servicePort: 80
        - path: /back-end/*
          backend:
            serviceName: back-end
            servicePort: 80
