virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-vs
spec:
  hosts:
  - "*"
  gateways:
  - web-gw
  http:
  - match:
    - uri:
        exact: /front-end/*
    - uri:
        exact: /back-end/*
    route:
    - destination:
        host: front-end
        port:
          number: 80
